--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <ng-sidebar -container>
-  <!--Sidebar -->
+  <!--Sidebar --git clone>
 <ng-sidebar opened= "opened">
   <p>Sidebar contents</p>
   <button>(click)="toggleSidebar()">close Sidebar</button>
