--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Samira By Chiroque</title>
+</head>
+<body>
+
+    <h1>BIENVENIDOS A TU TIENDITA ONLINE</h1>
+    
+</body>
+</html>
+
+
+
 <p>slider works!</p>
